# kiwiLang

./: .justfile  CMakeLists.txt  README.md  shell.nix
examples/hello/: CMakeLists.txt  hello.cpp
include/kiwilang/: kiwilang.hpp  math.hpp
scripts/: format.sh
tests/: test_library.cpp
